--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "expo": "~54.0.33",
     "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
+    "moti": "^0.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-reanimated": "~4.1.1",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
