--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,10 @@
 {
+  "cli": {
+    "appVersionSource": "remote"
+  },
   "build": {
     "preview": {
+      "environment": "preview",
       "android": {
         "buildType": "apk"
       }
