--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "debtset",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/debtset.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
