--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-community/datetimepicker": "8.4.4",
     "@supabase/supabase-js": "^2.95.3",
     "expo": "~54.0.33",
@@ -21,7 +22,8 @@
     "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "~4.1.1",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
