--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     "android": {
       "package": "com.holydev99.debtset",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/debtset.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
